# Mousai

./: .gitignore  Cargo.toml  Mousai.doap  README.md  io.github.seadve.Mousai.json  meson.build  meson_options.txt  typos.toml
.ci/: flathub_wait_for_build.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  flathub.yml  testing.yml
build-aux/: checks.py  dist-vendor.sh  io.github.seadve.Mousai.Devel.json  meson_post_install.py
data/: io.github.seadve.Mousai.appdata.xml.in  io.github.seadve.Mousai.desktop.in  io.github.seadve.Mousai.desktop.in.in  io.github.seadve.Mousai.gschema.xml  io.github.seadve.Mousai.gschema.xml.in  io.github.seadve.Mousai.metainfo.xml.in.in  io.github.seadve.Mousai.service.in  meson.build  mousai.gresource.xml
data/logo/: meson.build
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: album-art.ui  album-cover.ui  album_cover.ui  audio-player-widget.ui  database-error-window.ui  error-dialog.ui  external-link-cell.ui  external-link-tile.ui  history-view.ui  history_view.ui  information-row.ui  information_row.ui  inspector-page.ui  inspector_page.ui  lyrics-page.ui  lyrics_page.ui  main-page.ui  playback-button.ui  playback_button.ui  preferences-dialog.ui  preferences-window.ui  preferences_dialog.ui  recognized-page-tile.ui  recognized-page.ui  recognized_page.ui  recognized_page_tile.ui  recognizer-status-button.ui  recognizer-status.ui  recognizer-view.ui  recognizer_view.ui  shortcuts.ui  song-bar.ui  song-cell.ui  song-page.ui  song-tile.ui  song_bar.ui  song_page.ui  time-label.ui  window.ui
data/ui/: button_player.ui  help_overlay.ui  main_window.ui  playback_indicator.ui  shortcuts.ui  shortcuts_window.ui  song_item.ui  song_row.ui  songrow.ui  style.css  token_dialog.ui  welcome.ui  window.ui
hooks/: pre-commit.hook
po/: LINGUAS  POTFILES  POTFILES.in  README.md  ar.po  be.po  bqi.po  ca.po  cs.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ilo.po  it.po  ja.po  ka.po  kab.po  ko.po  kw.po  meson.build  mousai.pot  ms.po  nb_NO.po  ne.po  nl.po  (+15 more)
src/: about.rs  about_window.rs  album_art.rs  album_art_manager.rs  application.rs  audio_device.rs  audio_recording.rs  clock_time.rs  database.rs  database_error_window.rs  date_time.rs  db.rs  device.rs  error_dialog.rs  external_link.rs  external_links.rs  history_view.rs  inspector_page.rs  macros.rs  main.py  main.rs  meson.build  mousai.gresource.xml  mousai.in  player.rs  preferences_dialog.rs  preferences_window.rs  provider.rs  recognizer.rs  serde.rs  serde_helpers.rs  settings.rs  song.rs  song_filter.rs  song_list.rs  song_player.rs  song_sorter.rs  songrow.py  songrow.ui  style.css  (+7 more)
src/album_art/: mod.rs  store.rs
src/album_art_store/: mod.rs
src/backend/: audd_wrapper.py  recorder.py  song_player.py  timer.py  utils.py  voice_recorder.py
src/core/: aud_d.rs  audio_device_class.rs  audio_player.rs  audio_recorder.rs  audio_recording.rs  binding_vec.rs  bytes.rs  cancellable.rs  clock_time.rs  database.rs  date_time.rs  mod.rs
src/core/album_art_store/: album_art.rs  mod.rs
src/database/: migrations.rs  mod.rs
src/model/: db.rs  external_link.rs  external_link_list.rs  external_links.rs  fuzzy_filter.rs  fuzzy_sorter.rs  mod.rs  song.rs  song_filter.rs  song_id.rs  song_list.rs  song_sorter.rs  uid.rs
src/model/external_link/: apple_music.rs  aud_d.rs  mod.rs  spotify.rs  youtube.rs
src/player/: mod.rs  state.rs
src/provider/: aud_d.rs  mock.rs  mod.rs
src/provider/aud_d/: error.rs  mock.rs  mod.rs  response.rs
src/recognizer/: mod.rs  recorder.rs  recording.rs  recordings.rs
src/recognizer/provider/: error.rs  error_tester.rs  mod.rs  settings.rs
src/recognizer/provider/aud_d/: error.rs  mock.rs  mod.rs  response.rs
src/recognizer/provider/shazam/: hanning.rs  mod.rs  signature.rs  signature_generator.rs
src/song_player/: mod.rs  state.rs
src/widgets/: button_player.py  main_window.py  playback_indicator.py  song.py  song_row.py  songrow.py  token_dialog.py  welcome.py  welcome_window.py  window.py
src/window/: album_art.rs  album_cover.rs  audio_player_widget.rs  audio_visualizer.rs  crossfade_paintable.rs  external_link_cell.rs  external_link_tile.rs  history_view.rs  information_row.rs  lyrics_page.rs  main_page.rs  mod.rs  playback_button.rs  progress_icon.rs  progress_paintable.rs  recognized_page.rs  recognized_page_tile.rs  recognizer_status.rs  recognizer_status_button.rs  recognizer_view.rs  song_bar.rs  song_cell.rs  song_page.rs  song_tile.rs  time_label.rs  waveform.rs
