[package]
name = "mousai"
version = "0.7.8"
authors = ["Dave Patrick Caberto <davecruz48@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
anyhow = "1.0"
async-lock = "3.1"
async-trait = "0.1"
fuzzy-matcher = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gsettings-macro = "0.2"
gst = { package = "gstreamer", version = "0.23" }
gst_play = { package = "gstreamer-play", version = "0.23" }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
heed = { version = "0.22", features = ["serde-bincode"] }
indexmap = { version = "2.9", features = ["serde"] }
mpris-server = "0.9"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soup3 = "0.7"
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
bincode = "1.3"
futures-util = "0.3"
tempfile = "3.12"
